# Subdivision

./: CMakeLists.txt  FindGLEW.cmake  LICENSE.txt  Readme.txt
Subdivision/: Defines.h  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  HalfEdgeDataStructure.h  LoopSubdivision.cpp  LoopSubdivision.h  MyObject.cpp  MyObject.h  Point3d.cpp  Point3d.h  Subdivision.h  Texture.cpp  Texture.h  TwoManifold - Kopie.cpp  TwoManifold - Kopie.h  TwoManifold.cpp  TwoManifold.h  Vertex.cpp  Vertex.h
Visualization2/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyGLWidget.cpp  MyGLWidget.h  ObjectDrawer.cpp  ObjectDrawer.h  TextureDisplay.cpp  TextureDisplay.h  main.cpp
